--- a/_data/onic_exhibition.yml
+++ b/_data/onic_exhibition.yml
@@ -7,7 +7,8 @@ exhibitors:
     logo: Nissho.jpg
     booth: 1
     abstract: |-
-      『ネットワーク』から『ネットワーキング』へ。<br />
+      『ネットワーク』から『ネットワーキング』へ。
+
       今回のSDN/NaaSデモでは、オープンソースのSDNコントローラーから、
       Pica8/Brocae製SDNスイッチ（SDN-GW）を自動制御します。これにより、
       他通信のバースティングの影響 やロケーションなどに関係無く、特定顧客
@@ -22,13 +23,16 @@ exhibitors:
     abstract: |-
       ネットワークのプログラマビリティを実現することで、お客様のニーズに決め
       細やかな対応を可能とする Cisco Open Network Environment(CiscoONE)
-      ソリューションを具体的なデモンストレーションと共に展示いたします。<br />
+      ソリューションを具体的なデモンストレーションと共に展示いたします。
       1. One Platform Kit（onePK）<br />
-      Cisco IOS®、IOS-XR、NX-OSで利用可能な開発者用のアプリケーション プログラミング インターフェイス（API）のデモとご紹介　（遅延、回線使用状況に応じたルーティングテーブル更新デモなど）<br />
+      Cisco IOS®、IOS-XR、NX-OSで利用可能な開発者用のアプリケーション プログラミング 
+      インターフェイス（API）のデモとご紹介　（遅延、回線使用状況に応じたルーティン
+      グテーブル更新デモなど）
       2. クラウドオーケストレーション<br />
-      クラウド環境におけるサーバー、ストレージおよびネットワークの物理および論理リソース管理ツールのUCS Directorのデモとご紹介　（VXLAN含むOverlay環境にも対応）<br />
+      クラウド環境におけるサーバー、ストレージおよびネットワークの物理および論理
+      リソース管理ツールのUCS Directorのデモとご紹介（VXLAN含むOverlay環境にも対応）
       3. Cisco eXtensible Network Controller（XNC）<br />
-      OpenDaylightをベースに開発されているCiscoのSDNコントローラーのデモとご紹介<br />
+      OpenDaylightをベースに開発されているCiscoのSDNコントローラーのデモとご紹介
       4. Cisco ONE概要説明<br />
       Cisco Open Network Environmentのコンセプトやロードマップをご紹介いたします。
   - name: 株式会社日立製作所
@@ -37,13 +41,13 @@ exhibitors:
     booth: 3
     abstract: |-
       日立ブースでは、目的に応じた柔軟なネットワーク制御を可能にするSDN関連の
-      最新技術を展示します。<br />
-      １．ネットワーク仮想化を活用したシステム自動生成技術(参考出展)<br />
+      最新技術を展示します。
+      1. ネットワーク仮想化を活用したシステム自動生成技術(参考出展)<br />
       サーバ／ストレージ／ネットワークの３要素を仮想化することにより、システム
       全体を仮想化基盤上で構成できるようになります。システム定義のテンプレート
       に基づき、システムを迅速に自動構成します。マルチハイパーバイザ対応、
-      オープンスタック・クラウドスタック環境下でデモンストレーションを実施します。<br />
-      ２．クラウドおよびネットワークの高機能化技術<br />
+      オープンスタック・クラウドスタック環境下でデモンストレーションを実施します。
+      2. クラウドおよびネットワークの高機能化技術<br />
       ネットワークのみならずデータセンタ内のIT資源も考慮し、総合的に負荷配分
       や資源配置を制御することで、通常はトレードオフとなる信頼性の要件と省電力
       の要件を調和させたミッションクリティカルなクラウドを構成する各種技術を展示します。
@@ -57,7 +61,8 @@ exhibitors:
       を開発し提供しております。今回の展示ではSSPの特徴の1つであるNorthbound API
       を用いてのネットワーク構築の過程をご覧頂くためのデモを行います。加えて、MPLS
       への取り組みとして機器ベンダ製品との連携のデモを通して最新リリースのご紹介を致します。
-      企業向け SDN Solution である 「OmniSphere」 の開発も進めております。<br />
+      企業向け SDN Solution である 「OmniSphere」 の開発も進めております。
+
       OmniSphere はオ フィス向け仮想ネットワークソリューションであり、端末ある
       いはユーザをSDNで管理する仮 想ネットワークに結びつけるものです。これにより
       「組織変更やレイアウト変更のたびに繰り 返されるネットワーク再設計と再構築」
@@ -72,11 +77,12 @@ exhibitors:
       の枠を超え、先進的なアプリケーションを一つのプラットフォームで提供する、
       ユニファイドアプリケーションサービスゲートウェイ（UASG）です。従来のADC
       機能に加えて、セキュリティ機能やSDNソリューション等を含む次世代ネットワーク
-      機能を提供しています。<br />
-      展示内容<br />
-      ■ADC機能を提供するThunder/AXをSDN環境に統合し、負荷に応じて
-      ダイナミックにADCリソースをコントロールする「SDNスケールアウトソリューション」<br />
-      ■クラウド環境でADCリソースを含めた構築・運用の自動化を可能にするThunder/AXと
+      機能を提供しています。
+
+      展示内容
+      * ADC機能を提供するThunder/AXをSDN環境に統合し、負荷に応じて
+      ダイナミックにADCリソースをコントロールする「SDNスケールアウトソリューション」
+      * クラウド環境でADCリソースを含めた構築・運用の自動化を可能にするThunder/AXと
       他社クラウドオーケストレーター製品との連携ソリューション
   - name: Nuage Networks (日本アルカテル・ルーセント株式会社)
     profile: https://www.nuagenetworks.net/
@@ -109,14 +115,15 @@ exhibitors:
       ファーウェイは、SDN/NFV技術に基づく「SoftCOM」とその関連技術をご紹介
       いたします。「SoftCOM」はSDN/NFV、クラウドなどの技術理念に基づいて
       ファーウェイが構想したテクノロジで、キャリア・ネットワークにもたらし
-      うる利益と価値を最大限にします。<br />
-      ・プロトコル忘却型フォワーディング(Protocol Oblivious Forwarding 
+      うる利益と価値を最大限にします。
+      * プロトコル忘却型フォワーディング(Protocol Oblivious Forwarding 
       [POF]):究極のフレキシビリティとプログラム性をSDNに提供。 POF技術に
       よってユーザが定義したパケットがどのようにフォワーディングされるかを紹介。
-      <br />・SOX:Openflow1.0/1.2/1.3を同時にサポートする業界初のSDNコントローラ。
-      OF1.0/1.2/1.3ベースのOpenFlowスイッチが混在するネットワークをサポート。<br />
-      ・SN-640:ハイパフォーマンス(640Gbps)かつ低遅延（300ns）の小型（1U）SDN/OpenFlow
-      スイッチ。Openflow1.2/ 1.3をサポート。<br />・SDNテクノロジーデモ:SOXによる
+      * SOX:Openflow1.0/1.2/1.3を同時にサポートする業界初のSDNコントローラ。
+      OF1.0/1.2/1.3ベースのOpenFlowスイッチが混在するネットワークをサポート。
+      * SN-640:ハイパフォーマンス(640Gbps)かつ低遅延（300ns）の小型（1U）SDN/OpenFlow
+      スイッチ。Openflow1.2/ 1.3をサポート。
+      * SDNテクノロジーデモ:SOXによる
       OpenFlowスイッチのコントロール（デモ例:マルチパス、SDNコントローラ・ロード
       バランシング、フロー制御、QoS等）クラウド環境におけるSOXのROAベースのノース
       バウンドAPI(RESTful) IP/MPLSネットワークとのインターワーキング
@@ -153,14 +160,16 @@ exhibitors:
     abstract: |-
       SDN Japan 2013のCiena社ブース(#11)にお立ち寄り下さい。Ciena社のO
       PnアーキテクチャとSDNがどのようにして皆様のネットワークの斬新な変革を
-      お手伝いできるか自らの目でご確認下さい。<br />
+      お手伝いできるか自らの目でご確認下さい。
+
       これまでも世界最大級の通信事業者様にインテリジェントで柔軟な光パケット
       ソリューションを提供してきたCiena社は、SDNを活用したサービス提供の
       迅速化やネットワーク運用の効率化のための技術開発を他社に先駆けて推進
       しています。Ciena社のOPnアーキテクチャは、高度なプログラマビリティ
       を備えた新世代ネットワークを実現し、ネットワークのコスト低減、サービス
       差別化をお手伝いします。事前に詳しい情報をお知りになりたい方は、以下
-      からホワイトペーパーをダウンロードいただけます。<br />
+      からホワイトペーパーをダウンロードいただけます。
+
       http://www.ciena.com/resources/white-papers/The-Power-of-Software-in-Cienas-OPn-Network-Architecture.html
   - name: 三井情報株式会社
     profile: https://www.mki.co.jp/
@@ -171,8 +180,10 @@ exhibitors:
       事が予測されています。とりわけ、大規模なクラウドサービスを展開する事業者
       やデータセンター事業者からの期待が高いですが、SDN/OpenFlowの特性の一つ
       である『制御系』つまり、集中管理や業務効率化はサービス事業者に関わらず、
-      企業や文教のネットワーク管理者にも非常に期待の高い性能といえます。<br />
-      現在、MKIでは、企業や文教におけるOpenFlowの利用について検討を始めています。<br />
+      企業や文教のネットワーク管理者にも非常に期待の高い性能といえます。
+
+      現在、MKIでは、企業や文教におけるOpenFlowの利用について検討を始めています。
+
       企業や文教の管理者はネットワークを管理・運用する上で様々な問題を抱えています。
       中でも"セキュリティの強化"は常に管理者を悩ます問題の一つです。あらゆる脅威から
       ネットワークを安全に保つことは容易ではありません。また今日のユーザは様々な端末
@@ -188,12 +199,12 @@ exhibitors:
       ネットワンシステムズ(株)ではSDNの市場動向や各製品紹介、評価結果のご紹介等
       様々な取り組みを行い、コンサルから保守まで一貫してご提供できるよう取り組みを
       実施しております。展示ではSDNの市場動向、弊社の取り組みについてのご紹介し、
-      デモも実施します。<br />
-      1.次世代クラウド オープンネットワーク仮想化デモ<br />
+      デモも実施します。
+      1. 次世代クラウド オープンネットワーク仮想化デモ<br />
       OpenStackとBigSwitch社のBVSをマルチベンダー環境(Arista, Brocade, 
       SwithLight on Quanta, vArmour)環境で使用し、動的にネットワークが
-      作成されるデモを行います。<br />
-      2.統合モニタリングデモ<br />
+      作成されるデモを行います。
+      2. 統合モニタリングデモ<br />
       BigSwitch社のBigTapを使用し、トラフィックを必要なときに必要な場所で
       見える化 することを可能にします。APM(Application Performance 
       Management)のような監視 装置と組み合わせることで、ネットワークの
@@ -225,17 +236,18 @@ exhibitors:
     logo: brocade.jpg
     booth: 16
     abstract: |-
-      ブロケードが考えるSDNをギュっと凝縮してご紹介!≪ライブデモ実施≫<br />
-      --------------------------------------------------------------------<br />
+      ブロケードが考えるSDNをギュっと凝縮してご紹介!≪ライブデモ実施≫
+
       物理ネットワークと仮想ネットワークを融合し、さらなる「自動化」へ。
       ブロケードの展示コーナーでは、SDNのためのブロケードが考えるアーキテクチャを、
-      実際のデモと共に ご紹介します。<br />
+      実際のデモと共に ご紹介します。
+
       データセンター・ネットワークNo.2のブロケードだから実現可能な現実的なSDNとは？
-      名刺と交換でロゴ入りノベルティを差し上げます。ぜひお立ち寄りください。<br />
-      ●≪マンガで理解≫知らないと損する仮想化とネットワークの関係<br />
-      ●≪ライブデモ≫「BrocadeVyatta」で作るハイブリッドクラウドのためのVPN接続<br />
-      ●≪新製品≫40GbE対応最新イーサネット・ファブリックスイッチ<br />「
-      BrocadeVDX6740/6740T」
+      名刺と交換でロゴ入りノベルティを差し上げます。ぜひお立ち寄りください。
+
+      * ≪マンガで理解≫知らないと損する仮想化とネットワークの関係
+      * ≪ライブデモ≫「BrocadeVyatta」で作るハイブリッドクラウドのためのVPN接続
+      * ≪新製品≫40GbE対応最新イーサネット・ファブリックスイッチ「BrocadeVDX6740/6740T」
   - name: ミドクラジャパン株式会社
     profile: https://www.midokura.com/
     logo: midokura.jpg
@@ -244,7 +256,9 @@ exhibitors:
       "MidoNet"は、"Intelligence at the Edge"というコンセプトで開発され、
       分散型アーキテクチャを特徴とするオーバーレイ型ネットワーク仮想化プラット
       フォームです。OpenStack、CloudStackと連携し、L2からL4までの拡張性が高く、
-      単一障害点を持たないネットワークサービスをします。<br />本展示では、8月に
+      単一障害点を持たないネットワークサービスをします。
+      
+      本展示では、8月に
       新リリースされたMidoNet DiyariとRed Hat OpenStackのデモや、お客様や
       パートナー様による検証事例の紹介を行います。
   - name: 伊藤忠テクノソリューションズ株式会社
@@ -254,9 +268,11 @@ exhibitors:
     abstract: |-
       伊藤忠テクノソリューションズ（株）では、弊社の強みであるマルチベンダー
       ソリューションと、長年にわたって取り組んできた仮想化技術を用いて、
-      お客様のクラウド基盤の提案から設計・構築・保守までワンストップで提供可能です。<br />
+      お客様のクラウド基盤の提案から設計・構築・保守までワンストップで提供可能です。
+
       展示ブースでは、情報通信システム事業グループが中心となりSDN/NFVへの
-      取り組みのご紹介と、それぞれのソリューションの一部を用いたデモを実施いたします。<br />
+      取り組みのご紹介と、それぞれのソリューションの一部を用いたデモを実施いたします。
+
       また、SDN関連製品などのカタログも各種ご用意いたしておりますので、是非ブース@18まで
       お立ち寄りください。CTCでは、ソフトウェアによる効率的な管理を実現するITインフラ
       ソリューションを、SDI(Software Defined Infrastructure)というコンセプトの
@@ -266,7 +282,8 @@ exhibitors:
     logo: arista.jpg
     booth: 19
     abstract: |-
-      ～SDN時代のデータセンターネットワークスイッチ～<br />
+      ～SDN時代のデータセンターネットワークスイッチ～
+
       業界最高密度の10/40/100GbEポート11Uで最大1,152ポートの10G、288ポートの40G、
       96ポートの100Gを収容可能な新製「Arista 7500E」をご紹介いたします。プログラミン
       グ性に優れたArista Extensible Operating System(EOS)ソフトウェアを利用する
@@ -278,7 +295,8 @@ exhibitors:
     booth: 20
     abstract: |-
       SDN Japan 2013 において、Cyan は、現実の世界でのSDN Use Caseにより、クラウド
-      とWAN のオーケストレーションをデモンストレーションします。<br />
+      とWAN のオーケストレーションをデモンストレーションします。
+
       データセンターネットワークとトランスポートインフラストラクチャとの統合は、ネット
       ワークオペレータが、さらに自動化され経済的なクラウドサービスをエンタプライズカス
       タマーにデリバリーしていくことを支援します。このデモンストレーションは、マルチベ
@@ -293,7 +311,8 @@ exhibitors:
     abstract: |-
       既存の物理ネットワークを変更することなく、迅速かつ柔軟に、ハイパースケールな
       マルチテナントネットワークが構築可能な、SDNのオーバーレイモデル、DOVE
-      (Distributed Overlay Virtual Ethernet)テクノロジーと製品をご紹介します。<br />
+      (Distributed Overlay Virtual Ethernet)テクノロジーと製品をご紹介します。
+
       なおこの製品のKVM対応版を、OpenDaylight Projectを介してOpen DOVEとして
       オープンソース化する予定です。
   - name: シトリックス・システムズ・ジャパン株式会社
